# promptscope

./: .gitignore  Procfile  README.md  pyproject.toml  requirements.txt
promptscope/: api.py  cli.py  db.py  scorer.py
