[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "promptscope"
version = "0.1.0"
description = "CLI tool to score, analyze, and improve LLM prompts"
requires-python = ">=3.10"
dependencies = [
    "typer[all]>=0.12",
    "rich>=13",
    "httpx>=0.27",
]

[project.scripts]
promptscope = "promptscope.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["promptscope*"]
